<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="app_information">        \
        本应用是延边州委组织部干部信息管理系统，\
        有关系统问题，请以邮件形式反馈给我们，谢谢！!</string>
    <string name="addroster_text">添加%1$s(%2$s)为好友?</string>
    <string name="addroster_title">添加好友</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">释放立即刷新</string>
    <string name="xlistview_header_hint_loading">正在刷新...</string>
    <string name="xlistview_header_last_time">上次更新：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="textOn">"    "</string>
    <string name="textOff">"    "</string>
    <string name="textOn7">  </string>
    <string name="textOff7">  </string>
    <string name="next">下一步</string>
    <string name="mobile">手机</string>
    <string name="register_new">注册一个</string>
    <string name="register">注册</string>
    <string name="app_name">延边州干部信息管理系统</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="login">登 录</string>
    <string name="search">查找</string>
    <string name="username">用户名</string>
    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="login_prompt">正在登陆...</string>
    <string name="register_prompt">注册中...</string>
    <string name="login_prompt_msg">正在连接...</string>
    <string name="connect_timeout">连接超时，请重试</string>
    <string name="password_input_prompt">请输入密码</string>
    <string name="username_input_prompt">请输入用户名</string>
    <string name="email_input_prompt">请输入电子邮箱</string>
    <string name="password_input_prompt_again">在输入一次</string>
    <string name="hello">Hello World, XMPPIMActivity !!!</string>
    <string name="all_rights_reserved">Copyright © 2016. All Rights Reserved.</string>
    <string name="logout_exit_account">注销</string>
    <string name="friend_request_approved">同意</string>
    <string name="friend_request_reject">拒绝</string>
    <string name="setting_about_description">我的应用，我做主！</string>
    <string name="recent_chat_fragment_title">最近会话</string>
    <string name="app_version">V0.5.0</string>
    <string name="mobileorpwd_null_prompt">密码不能为空</string>
    <string name="username_null_prompt">用户名不能为空</string>
    <string name="not_a_mobile">请正确输入手机号</string>
    <string name="old_password_not_correct">旧密码不正确</string>
    <string name="password_not_match">两次输入密码不一致</string>
    <string name="not_a_email">请正确输入邮箱，用于找回密码</string>
    <string name="veryfy_mobile_find_rules">至少输入5位数字或一位以上字符</string>
    <string name="nothing_find_peaple">没有找到任何一个符合条件的人</string>
    <string name="roster_add_request">一个添加联系人请求</string>
    <string name="sys_notify_ticker">收到%1$s条系统消息，请查看</string>
    <string name="show_request_record">显示好友添加记录</string>
    <string name="sys_notify_view">查看系统消息</string>
    <string name="password_wrong">密码错误</string>
    <string name="login_first">请先登录</string>
    <string name="use_password">使用密码方式登录</string>
    <string name="net_error_tip">当前网络不可用，请点击检查网络。</string>
    <string name="searchdialog_find_contact_new">搜索好友</string>
    <string name="myemail">70838419@qq.com</string>
    <string name="mynetworkstatus">手机网络</string>
    <string name="serverstatus">服务器</string>
    <string name="network_desciption">     由于服务器为个人PC，可能会经常重启，在这里提供异常情况处理方法，\
              如果不是手机本身问题，在必要时请选择重新连接。</string>
    <string name="dial">拨打</string>
    <string name="message">消息</string>
    <string name="notify_friend_request_title">添加好友通知</string>
    <string name="notify_friend_request_body">同意%1$s添加为好友？</string>
    <string name="new_message">收到一条新消息</string>
    <string name="contacts">联系人</string>
    <string name="findfriends">找人</string>
    <string name="settings">设置</string>
    <string name="action_settings">设置</string>
    <string name="add_roster_request">请求中...</string>
    <string name="add_roster_suss">请求已发送</string>
    <string name="add_roster_failed">请求失败</string>
    <string name="settings_online">在线</string>
    <string name="settings_offline">离线</string>
    <string name="context_delete">删除</string>
    <string name="context_clear">清除</string>
    <string name="send">发送</string>
    <string name="select_avatar">请选择头像</string>
    <string name="show_logs">显示关键日志</string>
    <string name="check_upgrade">检查版本</string>
    <string name="time">时间</string>
    <string name="friends_add_records">好友添加记录</string>
    <string name="message_conversition">消息会话</string>
    <string name="where_is_friends">小伙伴在吗</string>
    <string name="already_regestered">该手机号可能已被注册。</string>
    <string name="copy">复制</string>
    <string name="paste">粘贴</string>
    <string name="forward">转发</string>
    <string name="nothing">什么也没有</string>
    <string name="to_implement">暂未实现，敬请期待。</string>
    <string name="resume">简介</string>
    <string name="detail">详细</string>
    <string name="family">家庭</string>
    <string name="record">履历</string>
    <string name="personlist">人员列表</string>
    <string name="list">列表</string>
    <string name="piechart">饼状图</string>
    <string name="barchart">柱状图</string>
    <string name="wordlist">文字列表</string>
    <string name="person_sex_count">人员性别统计</string>
    <string name="person_age_count">人员年龄统计</string>
    <string name="person_depth_count">人员级别统计</string>
    <string name="person_nation_count">人员民族统计</string>
    <string name="person_edu_count">人员学历统计</string>
    <string name="person_level_count">人员级别统计</string>
    <string name="person_job_count">人员职务统计</string>
    <string name="person_org_count">人员组织统计</string>
    <string name="dataupdate">数据更新</string>
    <string name="changepassword">更改密码</string>
    <string name="inputoldpassword">请输入您的旧密码</string>
    <string name="inputnewpassword">请输入您的新密码</string>
    <string name="confirmnewpassword">请再次输入新密码</string>
    <string name="confirmchange">确认修改</string>
    <string name="gesturesetting">手势设置</string>
    <string name="aboutus">关于我们</string>
    <string name="no_data">没有找到符合条件的房源</string>
    <string name="menu_select_all">全选</string>
    <string name="menu_cancel_select_all">取消全选</string>
    <string name="menu_sort">排序</string>
    <string name="menu_new">新建文件夹</string>
    <string name="menu_diaplay_hiden">显示点文件和隐藏文件</string>
    <string name="menu_not_diaplay_hiden">隐藏点文件和隐藏文件</string>
    <string name="menu_refresh">刷新</string>
    <string name="menu_sort_name">名称</string>
    <string name="menu_sort_size">大小</string>
    <string name="menu_sort_time">时间</string>
    <string name="menu_sort_type">类型</string>
    <string name="input_new_folder_info">请输入文件夹名称</string>
    <string name="new_folder_exist_err">创建文件夹失败，文件夹已存在.</string>
    <string name="new_folder_spec_char_err">创建文件夹失败，文件夹名称包含特殊字符“/”.</string>
    <string name="new_folder_null_err">创建文件夹失败，文件夹名称输入为空.</string>
    <string name="input_rename_info">请输入新名称</string>
    <string name="rename_exist_err">重命名失败，使用该名称的文件已存在.</string>
    <string name="rename_spec_char_err">重命名失败，重命名名称包含特殊字符“/”.</string>
    <string name="rename_null_err">重命名失败，重命名名称输入为空.</string>
    <string name="cut">剪切</string>
    <string name="rename">重命名</string>
    <string name="delete">删除</string>
    <string name="delete_info">确认删除?</string>
    <string name="delete_folder_err">删除文件夹%s失败！</string>
    <string name="delete_file_err">删除文件%s失败！</string>
    <string name="detail_path">路径：</string>
    <string name="detail_size">大小：</string>
    <string name="detail_can_read">可读：</string>
    <string name="detail_can_write">可写：</string>
    <string name="detail_hidden">隐藏：</string>
    <string name="copy_file_exist_info">文件%s已存在，是否要覆盖？</string>
    <string name="select_all">全选</string>
    <string name="select_none">不选</string>
    <string name="cancle">取消</string>
    <string name="back">返回</string>
    <string name="new_gesture">请绘制新的解锁图案</string>
    <string name="confirm_new_gesture">请再次绘制解锁图案</string>
    <string name="gesture_too_short">至少连接4个点，请重试</string>
    <string name="gesture_drawing">完成后请松手</string>
    <string name="gesture_different">两次绘制解锁图案不一致</string>
    <string name="password_updated">密码已更新</string>
    <string name="is_not_database">非数据库文件，无法导入。</string>
    <string name="confirm_import">确认要导入新的数据库吗？原有数据库将被删除</string>
    <string name="database_import">数据库导入</string>
    <string name="importing">正在导入...</string>
    <string name="import_sucess">导入成功</string>
    <string name="import_failed">导入失败</string>
    <string name="important_tips_title">重要提示</string>
    <string name="person_basic">基本信息</string>
    <string name="important_tips_body">系统尚未发现数据库文件，首次使用请在系统设置-&amp;gt;数据更新重选择数据库文件进行导入。</string>
    <string name="exist_tips_body">确定要退出系统吗？</string>
    <string name="statis_sex">人员性别统计</string>
    <string name="statis_age">人员年龄统计</string>
    <string name="statis_nation">人员民族统计</string>
    <string name="statis_edu">人员学历统计</string>
    <string name="statis_depth">人员级别统计</string>
    <string name="statis_positon">人员职务统计</string>
    <string name="statis_status">人员状态统计</string>
    <string name="statis_group">人员组织统计</string>
    <string name="rd_repeat">Repeat</string>
    <string name="rd_daily">Daily</string>
    <string name="rd_weekly">Weekly</string>
    <string name="rd_monthly">Monthly</string>
    <string name="rd_yearly">Yearly</string>
    <string name="rd_none">None</string>
    <string name="rd_every">Every</string>
    <string name="rd_day">day</string>
    <string name="rd_days">days</string>
    <string name="rd_week">week</string>
    <string name="rd_weeks">weeks</string>
    <string name="rd_month">month</string>
    <string name="rd_months">months</string>
    <string name="rd_year">year</string>
    <string name="rd_years">years</string>
    <string name="rd_forever">Forever</string>
    <string name="rd_until">Until</string>
    <string name="rd_until_full">Until a date</string>
    <string name="rd_for">For</string>
    <string name="rd_for_full">For a number of events</string>
    <string name="rd_month_same_day">on the same day each month</string>
    <string name="rd_month_last">on every last %s</string>
    <string name="rd_month_first">on every first %s</string>
    <string name="rd_month_second">on every second %s</string>
    <string name="rd_month_third">on every third %s</string>
    <string name="rd_month_fourth">on every fourth %s</string>
    <string name="rd_event">event</string>
    <string name="rd_events">events</string>
    <string name="all">全部</string>
    <string name="male">男性</string>
    <string name="female">女性</string>
    <string name="hanzu">汉族</string>
    <string name="chaoxianzu">朝鲜族</string>
    <string name="feichaozu">非朝鲜族</string>
    <string name="shaoshuminzu">少数名族</string>
    <string name="dangyuan">中共党员</string>
    <string name="notdangyuan">非中共党员</string>
    <string name="college_degree">大学</string>
    <string name="master_degree">硕士</string>
    <string name="doctor_degree">博士</string>
    <string name="zhuan_degree">大专</string>
    <string name="zhongzhuan_degree">中专</string>
    <string name="early_work_year">最早工作年份</string>
    <string name="last_work_year">最晚工作年份</string>
    <string name="early_party_year">最早入党年份</string>
    <string name="last_party_year">最晚入党年份</string>
    <string name="small_age">最小年龄</string>
    <string name="large_age">最大年龄</string>
    <string name="save_success">收藏成功</string>
    <string name="no_favorate_items">没有收藏记录</string>
    <string name="no_query_record">没有查询历史</string>
    <string name="group_query">[组织查询]</string>
    <string name="user_query">[人员查询]</string>
    <string name="static_query">[统计查询]</string>
    <string name="zgzt_zg">在岗</string>
    <string name="zgzt_lz">离职</string>
    <string name="zgzt_tx">退休</string>
    <string name="person_job_status">人员状态统计</string>
     <string name="reset_tips">所有数据将会被清零，确定吗？</string>
</resources>
