<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/title_bar" >
        
        <Button
            android:layout_width="65dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:background="@drawable/top_back_left"
            android:gravity="center_horizontal|center_vertical"
            android:padding="0dp"
            android:text="back"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:visibility="invisible" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/changepassword"
            android:textColor="#ffffff"
            android:textSize="18sp" />                
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/shape_bg"
        android:orientation="vertical" >
        
        <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="50dp"
	        android:gravity="center_vertical"
	        android:orientation="horizontal" >
	        <EditText
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dp"
	            android:layout_marginRight="10dp"
	            android:paddingTop="2dp"
	            android:paddingBottom="2dp"
	            android:inputType="textPassword"
	            android:paddingLeft="6dp"
	            android:hint="@string/inputoldpassword"
	            android:singleLine="true"
	            android:id="@+id/edittext_old_password"
	            android:maxLength="15"
	            android:background="#ffffff"
	            android:gravity="center|left"
	            android:textSize="18sp" />
	    </LinearLayout>
	    
	    <View
	        android:layout_width="match_parent"
	        android:layout_height="1dp"
	        android:background="@drawable/shape_line" />
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="50dp"
	        android:gravity="center_vertical"
	        android:orientation="horizontal" >    
	        <EditText
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dp"
	            android:layout_marginRight="10dp"
	            android:paddingTop="2dp"
	            android:paddingBottom="2dp"
	            android:paddingLeft="6dp"
	            android:singleLine="true"
	            android:hint="@string/inputnewpassword"
	            android:inputType="textPassword"
	            android:maxLength="15"
	            android:background="#ffffff"
	            android:id="@+id/edittext_password"
	            android:textSize="18sp" />
	    </LinearLayout>
	    
	    <View
	        android:layout_width="match_parent"
	        android:layout_height="1dp"
	        android:background="@drawable/shape_line" />
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="50dp"
	        android:gravity="center_vertical"
	        android:orientation="horizontal" > 
	        <EditText
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dp"
	            android:layout_marginRight="10dp"
	            android:paddingTop="2dp"
	            android:paddingBottom="2dp"
	            android:paddingLeft="6dp"
	            android:singleLine="true"
	            android:hint="@string/confirmnewpassword"
	            android:inputType="textPassword"
	            android:maxLength="15"
	            android:background="#ffffff"
	            android:id="@+id/edittext_confirm_password"
	            android:textSize="18sp" />
	    </LinearLayout>
    
	    <View
	        android:layout_width="match_parent"
	        android:layout_height="1dp"
	        android:background="@drawable/shape_line" />
	    
	</LinearLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >
	    <Button
	        android:id="@+id/btn_confirmchange"
	        android:layout_width="match_parent"
	        android:layout_height="40dp"
	        android:layout_centerInParent="true"
	        android:layout_marginLeft="20dp"
	        android:layout_marginRight="20dp"
	        android:layout_marginTop="40dp"
	        android:text="@string/confirmchange"
	        android:background="@drawable/register_btn_bg" />
    </RelativeLayout>
    
</LinearLayout>